# deep-system

./: README.md  main.py  pyproject.toml
src/: main.py
src/deepsystem/: __main__.py  commands.py  config.py  filesystem.py  history.py  persistence.py  question.py  sessions.py  system.py  ui.py
tests/deepsystem/: history_test.py  system_test.py
