[project]
name = "deep-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
]

[dependency-groups]
test = [
    "pytest>=8.4.1",
]
